# pumlpy

./: LICENSE  README.md  cli.py  main.py  pumlpy.puml  pyproject.toml  setup.py  test.puml  test.py
examples/: pumlpy-impl.puml  pumlpy.puml
pumlpy/: DEV.md  api.py  extractor.py  factory.py  interface.py  rtypes.py  utils.py
pumlpy/impl/: base.py
